# pclika-hdl

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_LICENSE.md  HARDWARE_LICENSE.md  LICENSE  NOTICE  README.md  SECURITY.md
brand/: ORIGIN_CODEX.md
bridge/mcp-server/: pyproject.toml
bridge/mcp-server/pclika_hdl_bridge/: __init__.py  __main__.py  parsers.py  server.py  toolchain.py
bridge/tool-schemas/: hdl-tools.json
configs/mcp/: claude-code.commands.md  codex.config.toml  cursor.mcp.json  opencode.jsonc  vscode.mcp.json
docs/architecture/: platform.md
docs/devices/: ice40up5k.md
docs/hardware/: hardware-list.md
docs/toolchain/: setup.md
examples/blink/: Makefile  README.md
examples/blink/constraints/: ice40up5k.pcf
examples/blink/rtl/: blink_top.v
examples/blink/tb/: tb_blink_top.v
examples/pwm-gen/: Makefile  README.md
examples/pwm-gen/constraints/: ice40up5k.pcf
examples/pwm-gen/rtl/: pwm_gen_top.v
examples/uart-echo/: Makefile  README.md
examples/uart-echo/constraints/: ice40up5k.pcf
examples/uart-echo/rtl/: uart_echo_top.v
examples/uart-echo/tb/: tb_uart_echo_top.v
hdl/constraints/: ice40up5k.pcf
hdl/rtl/: pclika_pwm.v  pclika_spi_master.v  pclika_uart_rx.v  pclika_uart_tx.v
hdl/tb/: tb_pclika_pwm.v  tb_pclika_uart_tx.v
prompts/: rtl-review.md  synth-workflow.md  timing-debug.md
toolchain/docker/: Dockerfile
toolchain/scripts/: 99-pclika-usb.rules  Makefile
