[project]
name = "pclika-hdl-bridge"
version = "0.1.0"
description = "MCP bridge for Pclika HDL Platform — AI-native FPGA development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Pclika", email = "hello@pclika.com" }]
keywords = ["mcp", "fpga", "hdl", "yosys", "ice40", "ai", "claude", "codex"]

dependencies = [
    "anyio>=4.0",
]

[project.scripts]
pclika-hdl-bridge = "pclika_hdl_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pclika_hdl_bridge"]
